k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-ingress
  namespace: default
spec:
  ingressClassName: nginx

  rules:    
    - host: prometheus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000

    - host: support.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-service
                port:
                  number: 8000
